fix: keep the catalog current, ordered and honest about what it knows
Four ways the schema side gave a wrong answer rather than no answer.

**Vendor catalogs came back in a random order.** Schemas.of handed a
LinkedHashMap to Map.copyOf, whose iteration order is seeded per JVM run,
and everywhere() is read in order. SchemaRecords took the first catalog
that could describe a statement, so a project whose vendors disagree
about a column generated `float` in one build and `BigDecimal` in the
next from unchanged sources. The catalogs are now ordered by vendor name.

**And the disagreement itself was resolved by picking one.** The docs
promise it is reported; ConflictingColumnTypeException existed but was
only reachable from parameter inference, which returns early when a
statement has no parameters to infer. Every applicable catalog now has to
agree on what the row holds, and a real disagreement fails the build
naming the column and both types.

**`timestamp(6) with time zone` was a LocalDateTime.** baseType() cut the
type at the first parenthesis, which is right for `varchar(64)` and wrong
for every standard type carrying its precision in the middle — including
the spelling pg_dump writes. The parenthesised part is now removed rather
than cut at, so the words after it survive.

**Only `alter table ... add` was applied.** A dropped column stayed in
the catalog, `set not null` never landed, and a renamed column left the
old name behind — so `select handle from tenant` was reported as "no
column 'handle'" after the migration that created it. Drop, rename,
alter, modify and change are now applied, and an alter this reader cannot
follow takes the table out of the catalog instead of keeping a
description known to be stale.

**UPDATE ... FROM and DELETE ... USING dropped their extra sources**
while still reporting exhaustive(), so a parameter was checked against
the wrong table and inferred the wrong type. All three statement kinds
now collect their sources through one path t